# cirkit_waypoint_manager_msgs

./: .travis.yml  CMakeLists.txt  README.md  package.xml
msg/: BoundingBox.msg  BoundingBoxArray.msg
