<?xml version="1.0"?>
<package format="2">
  <name>waypoint_manager_msgs</name>
  <version>0.1.0</version>
  <description>The waypoint_manager_msgs package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
