<?xml version="1.0"?>
<package format="2">
  <name>cirkit_waypoint_manager_msgs</name>
  <version>0.1.0</version>
  <description>The waypoint_manager_msgs package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="httperror@404-notfound.jp">Yamasaki Tatsuya</maintainer>

  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
